# Cbrain

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2e90937192ea_add_importance_score_instructions_.py  6981c2715781_initial_schema.py
cbrain/: config.py  deps.py  main.py
cbrain/agents/: base.py  consolidator.py  enricher.py  prioritizer.py  question_generator.py  scheduler.py
cbrain/api/: agents.py  context.py  dashboard.py  questions.py  router.py  skills.py  sync.py  tasks.py
cbrain/db/: engine.py  models.py  seed.py
cbrain/integrations/: jopedia_sync.py  memory_sync.py  notion_sync.py
cbrain/services/: claude_client.py  context_store.py  enrichment.py  question_engine.py  signal_detector.py  skill_executor.py  skill_loader.py  task_engine.py  task_extractor.py
cbrain/skills/: analyze_blocker.md  decision_brief.md  draft_message.md  prioritize_tasks.md  summarize_context.md  team_pulse.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AgentStatus.tsx  ContextSearch.tsx  QuestionPanel.tsx  SkillSidebar.tsx  SyncBar.tsx  TaskList.tsx  TimelineView.tsx
frontend/src/hooks/: useDashboard.ts
